perf: fast copy
