# api/docs/swagger.yaml
@@ -98,15 +98,6 @@ definitions:
       size:
         type: integer
     type: object
-  router.FileCopyOptions:
-    properties:
-      ids:
-        items:
-          type: string
-        type: array
-    required:
-    - ids
-    type: object
   router.FileDeleteOptions:
     properties:
       ids:
@@ -272,6 +263,33 @@ definitions:
         type: string
       workspaceId:
         type: string
+    type: object
+  service.FileCopyManyOptions:
+    properties:
+      sourceIds:
+        items:
+          type: string
+        type: array
+      targetId:
+        type: string
+    required:
+    - sourceIds
+    - targetId
+    type: object
+  service.FileCopyManyResult:
+    properties:
+      failed:
+        items:
+          type: string
+        type: array
+      new:
+        items:
+          type: string
+        type: array
+      succeeded:
+        items:
+          type: string
+        type: array
     type: object
   service.FileList:
     properties:
@@ -950,22 +968,21 @@ paths:
       summary: Patch
       tags:
       - Files
-  /files/{id}/copy:
+  /files/{id}/copy/{targetId}:
     post:
-      description: Copy
-      operationId: files_copy
+      description: Copy One
+      operationId: files_copy_one
       parameters:
       - description: ID
         in: path
         name: id
         required: true
         type: string
-      - description: Body
-        in: body
-        name: body
+      - description: ID
+        in: path
+        name: targetId
         required: true
-        schema:
-          $ref: '#/definitions/router.FileCopyOptions'
+        type: string
       produces:
       - application/json
       responses:
@@ -977,7 +994,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/errorpkg.ErrorResponse'
-      summary: Copy
+      summary: Copy One
       tags:
       - Files
   /files/{id}/count:
@@ -1431,6 +1448,40 @@ paths:
           schema:
             $ref: '#/definitions/errorpkg.ErrorResponse'
       summary: Get User Permissions
+      tags:
+      - Files
+  /files/copy:
+    post:
+      description: Copy Many
+      operationId: files_copy_many
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/service.FileCopyManyOptions'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/service.FileCopyManyResult'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/errorpkg.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/errorpkg.ErrorResponse'
+      summary: Copy Many
       tags:
       - Files
   /files/create_from_s3:
